--- a/style.css
+++ b/style.css
@@ -36,7 +36,9 @@ body{
 /* .header{
     border: 1px solid black;
 } */
-
+header{
+  border-bottom: 1px solid #b3b3b4;
+}
 .header-content{
     width: 80%;
     max-width: 1280px;
@@ -63,7 +65,7 @@ body{
   border-radius: 20%;
 }
 .nav{
-  width: 700px;
+  width: 900px;
   /* border: 1px solid black; */
   display: flex;
   flex-direction: row;
@@ -74,12 +76,13 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 110px;
+  width: 130px;
   height: 35px;
   background-color:var(--primary-color);
   border-radius: 5px;
   color: white;
-  font-size: 12px;
+  font-size: 15px;
+  text-decoration: none;
 }
 .nav a:hover{
   transform: scale(0.97);
@@ -95,6 +98,7 @@ body{
   border-radius: 5px;
   /* color: white; */
   font-size: 17px;
+  text-decoration: none;
 }
 .contact:hover{
   color:var(--primary-color);
@@ -129,7 +133,7 @@ body.open{
   text-align: left;
   font-family: "Roboto", sans-serif;
 }
-@media(max-width:1024px){
+@media(max-width:1350px){
   .header-content{
     display: none;
   }
@@ -214,6 +218,7 @@ body.open{
   font-size: 30px;
 
 }
+
 /* ---------------------------------------- */
 /* .carousel{
   width: 30%;
@@ -236,10 +241,21 @@ body.open{
 
 .carousel-inner{
   /* border: 1px solid black; */
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   overflow: hidden;
   border-radius: 20px;
+}
+
+
+@media(max-width:500px){
+  .carousel-inner{
+    /* border: 1px solid black; */
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 20px;
+  }
 }
 /* .carousel-item {
   min-width: 100%;
@@ -272,7 +288,7 @@ body.open{
 #hero-content-p1{
   color: #2903cf;
   text-align: start;
-  font-size: 12px;
+  font-size: 15px;
   font-weight: 700;
   
 }
@@ -284,7 +300,7 @@ body.open{
   font-family: "Roboto", sans-serif;
 }
 .hero-content-p2{
-  font-size: 15px;
+  font-size: 19px;
   color: #555;
   text-align: left;
 }
@@ -343,7 +359,7 @@ body.open{
   font-size: 15px;
   color: #555;
 }
-@media(max-width:950px){
+@media(max-width:1150px){
   .hero-section{
     display: flex;
     flex-direction: column;
@@ -476,6 +492,9 @@ main{
 @media(max-width:360px){
   .registrations{
     width: 80%;
+  }
+  .hero-content-p2{
+    font-size: 12px;
   }
 }
 .register{
