--- a/style.css
+++ b/style.css
@@ -419,7 +419,9 @@ footer{
   justify-content: center;
   align-items: center;
   justify-content: space-evenly;
+  bottom: 0;
 }
+
 .address{
   color: white;
   text-align: left;
@@ -527,7 +529,10 @@ main{
 }
 .body-main{
   width: 80%;
-  height: 80vh;
+  height: 100%;
+  padding-bottom: 40px;
+  padding-top: 40px;
+  gap: 30px;
   /* border: 1px solid black; */
   display: flex;
   flex-wrap:wrap;
@@ -591,4 +596,47 @@ main{
   padding: 20px;
   color: #4144e7;
   font-size: 17px;
+}
+
+.cards-cont-index{
+  border: 1px solid black;
+  width: 80%;
+  margin: auto;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+
+}
+.heading-index{
+  color: #4a4ce9;
+  padding: 20px;
+}
+.heading-index-spectrum{
+  font-weight: 900;
+}
+.index-para{
+  color: #4a4ce9;
+  font-weight: 900;
+}
+.img-container{
+  /* border: 1px solid black; */
+  width: 80%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin-bottom: 100px;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.img-container img{
+  /* border: 1px solid black; */
+  height: 100px;
+  width: 100px;
+  margin: 10px;
+  border-radius: 10px;
+
 }
